added a more userfriendly upload of the records.json with a progressbar and everything
